exports[`invalid(1): a { & { color: red; } } 1`] = `

  1 | a { & { color: red; } }

`;

exports[`invalid(1): a { & { color: red; } } 2`] = `

Message:
> 1 | a { & { color: red; } }
    |     ^ Remove the redundant nested \`&\` style rule.

Output:
  1 | a { color: red; }

`;

exports[`invalid(10): a {\n\t@media (width > 0px) {\n\t\t& {\n\t\t\tcolor: red;\n\t\t}\n\t}\n} 1`] = `

  1 | a {
  2 | 	@media (width > 0px) {
  3 | 		& {
  4 | 			color: red;
  5 | 		}
  6 | 	}
  7 | }

`;

exports[`invalid(10): a {\n\t@media (width > 0px) {\n\t\t& {\n\t\t\tcolor: red;\n\t\t}\n\t}\n} 2`] = `

Message:
  1 | a {
  2 | 	@media (width > 0px) {
> 3 | 		& {
    | 		^ Remove the redundant nested \`&\` style rule.
  4 | 			color: red;
  5 | 		}
  6 | 	}
  7 | }

Output:
  1 | a {
  2 | 	@media (width > 0px) {
  3 | 		color: red;
  4 | 	}
  5 | }

`;

exports[`invalid(11): @media (width > 0px) {\n\ta {\n\t\t& {\n\t\t\tcolor: red;\n\t\t}\n\t}\n} 1`] = `

  1 | @media (width > 0px) {
  2 | 	a {
  3 | 		& {
  4 | 			color: red;
  5 | 		}
  6 | 	}
  7 | }

`;

exports[`invalid(11): @media (width > 0px) {\n\ta {\n\t\t& {\n\t\t\tcolor: red;\n\t\t}\n\t}\n} 2`] = `

Message:
  1 | @media (width > 0px) {
  2 | 	a {
> 3 | 		& {
    | 		^ Remove the redundant nested \`&\` style rule.
  4 | 			color: red;
  5 | 		}
  6 | 	}
  7 | }

Output:
  1 | @media (width > 0px) {
  2 | 	a {
  3 | 		color: red;
  4 | 	}
  5 | }

`;

exports[`invalid(12): a {\n\t& {\n\t\t@media (width > 0px) {\n\t\t\tcolor: red;\n\t\t}\n\t}\n} 1`] = `

  1 | a {
  2 | 	& {
  3 | 		@media (width > 0px) {
  4 | 			color: red;
  5 | 		}
  6 | 	}
  7 | }

`;

exports[`invalid(12): a {\n\t& {\n\t\t@media (width > 0px) {\n\t\t\tcolor: red;\n\t\t}\n\t}\n} 2`] = `

Message:
  1 | a {
> 2 | 	& {
    | 	^ Remove the redundant nested \`&\` style rule.
  3 | 		@media (width > 0px) {
  4 | 			color: red;
  5 | 		}
  6 | 	}
  7 | }

Output:
  1 | a {
  2 | 	@media (width > 0px) {
  3 | 		color: red;
  4 | 	}
  5 | }

`;

exports[`invalid(13): a {\n\t@layer theme {\n\t\t& {\n\t\t\tcolor: red;\n\t\t}\n\t}\n} 1`] = `

  1 | a {
  2 | 	@layer theme {
  3 | 		& {
  4 | 			color: red;
  5 | 		}
  6 | 	}
  7 | }

`;

exports[`invalid(13): a {\n\t@layer theme {\n\t\t& {\n\t\t\tcolor: red;\n\t\t}\n\t}\n} 2`] = `

Message:
  1 | a {
  2 | 	@layer theme {
> 3 | 		& {
    | 		^ Remove the redundant nested \`&\` style rule.
  4 | 			color: red;
  5 | 		}
  6 | 	}
  7 | }

Output:
  1 | a {
  2 | 	@layer theme {
  3 | 		color: red;
  4 | 	}
  5 | }

`;

exports[`invalid(14): a { & { color: red; } & { background: blue; } } 1`] = `

  1 | a { & { color: red; } & { background: blue; } }

`;

exports[`invalid(14): a { & { color: red; } & { background: blue; } } 2`] = `

Message:
> 1 | a { & { color: red; } & { background: blue; } }
    |     ^ Remove the redundant nested \`&\` style rule.

Output:
  1 | a { color: red; & { background: blue; } }

`;

exports[`invalid(14): a { & { color: red; } & { background: blue; } } 3`] = `

Message:
> 1 | a { & { color: red; } & { background: blue; } }
    |                       ^ Remove the redundant nested \`&\` style rule.

Output:
  1 | a { & { color: red; } background: blue; }

`;

exports[`invalid(15): a { & { & { color: red; } } } 1`] = `

  1 | a { & { & { color: red; } } }

`;

exports[`invalid(15): a { & { & { color: red; } } } 2`] = `

Message:
> 1 | a { & { & { color: red; } } }
    |     ^ Remove the redundant nested \`&\` style rule.

Output:
  1 | a { & { color: red; } }

`;

exports[`invalid(15): a { & { & { color: red; } } } 3`] = `

Message:
> 1 | a { & { & { color: red; } } }
    |         ^ Remove the redundant nested \`&\` style rule.

Output:
  1 | a { & { color: red; } }

`;

exports[`invalid(16): a { & { color: red !important; } } 1`] = `

  1 | a { & { color: red !important; } }

`;

exports[`invalid(16): a { & { color: red !important; } } 2`] = `

Message:
> 1 | a { & { color: red !important; } }
    |     ^ Remove the redundant nested \`&\` style rule.

Output:
  1 | a { color: red !important; }

`;

exports[`invalid(17): a { & { /* only a comment */ } } 1`] = `

  1 | a { & { /* only a comment */ } }

`;

exports[`invalid(17): a { & { /* only a comment */ } } 2`] = `

Message:
> 1 | a { & { /* only a comment */ } }
    |     ^ Remove the redundant nested \`&\` style rule.

Output:
  1 | a { /* only a comment */ }

`;

exports[`invalid(18): @scope (.component) { a { & { color: red; } } } 1`] = `

  1 | @scope (.component) { a { & { color: red; } } }

`;

exports[`invalid(18): @scope (.component) { a { & { color: red; } } } 2`] = `

Message:
> 1 | @scope (.component) { a { & { color: red; } } }
    |                           ^ Remove the redundant nested \`&\` style rule.

Output:
  1 | @scope (.component) { a { color: red; } }

`;

exports[`invalid(2): a { & { color: red } } 1`] = `

  1 | a { & { color: red } }

`;

exports[`invalid(2): a { & { color: red } } 2`] = `

Message:
> 1 | a { & { color: red } }
    |     ^ Remove the redundant nested \`&\` style rule.

Output:
  1 | a { color: red; }

`;

exports[`invalid(3): a { & {} } 1`] = `

  1 | a { & {} }

`;

exports[`invalid(3): a { & {} } 2`] = `

Message:
> 1 | a { & {} }
    |     ^ Remove the redundant nested \`&\` style rule.

Output:
  1 | a { }

`;

exports[`invalid(4): a { & { color: red } background: blue; } 1`] = `

  1 | a { & { color: red } background: blue; }

`;

exports[`invalid(4): a { & { color: red } background: blue; } 2`] = `

Message:
> 1 | a { & { color: red } background: blue; }
    |     ^ Remove the redundant nested \`&\` style rule.

Output:
  1 | a { color: red; background: blue; }

`;

exports[`invalid(5): a { & { color: red } @media (width > 0px) { background: blue; } } 1`] = `

  1 | a { & { color: red } @media (width > 0px) { background: blue; } }

`;

exports[`invalid(5): a { & { color: red } @media (width > 0px) { background: blue; } } 2`] = `

Message:
> 1 | a { & { color: red } @media (width > 0px) { background: blue; } }
    |     ^ Remove the redundant nested \`&\` style rule.

Output:
  1 | a { color: red; @media (width > 0px) { background: blue; } }

`;

exports[`invalid(6): article { color: green; & { color: blue; } color: red; } 1`] = `

  1 | article { color: green; & { color: blue; } color: red; }

`;

exports[`invalid(6): article { color: green; & { color: blue; } color: red; } 2`] = `

Message:
> 1 | article { color: green; & { color: blue; } color: red; }
    |                         ^ Remove the redundant nested \`&\` style rule.

Output:
  1 | article { color: green; color: blue; color: red; }

`;

exports[`invalid(7): a { & { b { color: red; } } } 1`] = `

  1 | a { & { b { color: red; } } }

`;

exports[`invalid(7): a { & { b { color: red; } } } 2`] = `

Message:
> 1 | a { & { b { color: red; } } }
    |     ^ Remove the redundant nested \`&\` style rule.

Output:
  1 | a { b { color: red; } }

`;

exports[`invalid(8): a {\n\t& {\n\t\tcolor: red;\n\t}\n} 1`] = `

  1 | a {
  2 | 	& {
  3 | 		color: red;
  4 | 	}
  5 | }

`;

exports[`invalid(8): a {\n\t& {\n\t\tcolor: red;\n\t}\n} 2`] = `

Message:
  1 | a {
> 2 | 	& {
    | 	^ Remove the redundant nested \`&\` style rule.
  3 | 		color: red;
  4 | 	}
  5 | }

Output:
  1 | a {
  2 | 	color: red;
  3 | }

`;

exports[`invalid(9): a {\n\t& /* keep before block */ {\n\t\t/* keep inside block */\n\t\tcolor: red;\n\t}\n} 1`] = `

  1 | a {
  2 | 	& /* keep before block */ {
  3 | 		/* keep inside block */
  4 | 		color: red;
  5 | 	}
  6 | }

`;

exports[`invalid(9): a {\n\t& /* keep before block */ {\n\t\t/* keep inside block */\n\t\tcolor: red;\n\t}\n} 2`] = `

Message:
  1 | a {
> 2 | 	& /* keep before block */ {
    | 	^ Remove the redundant nested \`&\` style rule.
  3 | 		/* keep inside block */
  4 | 		color: red;
  5 | 	}
  6 | }

Output:
  1 | a {
  2 | 	/* keep before block */
  3 | 	/* keep inside block */
  4 | 	color: red;
  5 | }

`;
